refactor: add the option with their respective links

--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@
         <img src="../images/michiCorazon.webp" alt="michi con corazones">
 
         <div class="middle-text">
-          <a class="btn" href="#">Sí</a>
+          <a class="btn" href="../pages/option.html">Sí</a>
           <a class="btn" id="fake" href="#">No</a>
         </div>
 
