refactor: end of the project

--- a/pages/fridaMuseum.html
+++ b/pages/fridaMuseum.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <section class="frida">
+  <section class="museum frida">
   </section>
 
   <section class="info">
@@ -16,7 +16,7 @@
     <div class="description">
       <p id="museumName">Museo Frida Kahlo</p> <br />
       <p> Fideicomiso Museos Diego Rivera y Frida Kahlo </p> <br />
-      <p> Londres 247Col. Del Carmen CoyoacánCP 04100Coyoacán, Coyoacán, Ciudad de México</p> <br />
+      <p> Londres 247 Col. Del Carmen Coyoacán CP 04100 Coyoacán, Coyoacán, Ciudad de México</p> <br />
     </div>
     
     <div class="schedules">
@@ -38,7 +38,7 @@
       <div id="ticket"> 
           <h2 id="name">Museo de Frida Kahlo</h2>
           <p id="day"></p>
-          <button onclick="generatePDF()">Descargar como PDF</button>
+          <button onclick="generatePDF()">Descargar Ticket</button>
       </div>
     </div>
   </section>
